<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ClasPerformanceTheme"
    tools:context="com.example.fmoyader.classperformance.activitiy.AddNewCourseActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/edit_text_course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_course_name"/>

        <EditText
            android:id="@+id/edit_text_course_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_course_description"/>

        <Button
            android:id="@+id/button_add_new_course"
            android:onClick="addNewCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_add_course"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
